# stock-automation

./: .gitignore  README.md  opencode.json  pyproject.toml  skills-lock.json
.github/workflows/: daily-brief.yml
scripts/: fetch_5year_data.py  visualize_600519_spring.py
stockexpert-daily-brief/: README.md  SPEC.md  pyproject.toml  requirements.txt  web_brief.py  策略评估报告.md  项目审核文档.md
stockexpert-daily-brief/.github/workflows/: daily-brief.yml
stockexpert-daily-brief/dashboard/: index.html  manifest.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-16/: 看板.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-17/: web_context.txt  看板.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-20/: 看板.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-21/: 看板.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-22/: 看板.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-23/: 看板.json
stockexpert-daily-brief/dashboard/data/2026-07/2026-07-24/: 看板.json
tasks/: todo.md
tests/: test_base.py  test_pipeline.py  test_validator.py
wyckoff/: __init__.py  pyproject.toml  schemas.py
wyckoff/data/: __init__.py  akshare_source.py  baostock_source.py  base.py  pipeline.py  tencent_source.py  validator.py
wyckoff/data/cache/: 600519_full_audit.md
wyckoff/detectors/: __init__.py  spring.py
wyckoff/docs/: COMPLIANCE_REPORT.md  PROJECT_REORGANIZATION_REPORT.md  REORGANIZATION_COMPLETE.md
wyckoff/docs/system/: README.md  SPEC_DATA_PIPELINE.md  实施方案.md
wyckoff/docs/tasks/: plan.md  todo.md
wyckoff/tests/: __init__.py  helpers.py  test_pipeline.py  test_spring.py
威科夫交易系统/: SPEC.md  实施方案.md
