[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wyckoff-trading"
version = "0.1.0"
description = "Wyckoff method trading signal system for A-shares"
readme = "SPEC.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "wingo.wen" }
]
dependencies = [
    "baostock>=0.8.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    # pytest not used; we rely on unittest (built-in)
    "ipython>=8.0",  # optional: for REPL exploration
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wyckoff*"]

[tool.setuptools.package-data]
wyckoff = ["py.typed"]
